# summarize-cli

./: .gitignore  README.md  main.py  pyproject.toml
src/summarize/: cli.py  config.py  extractor.py  summarizer.py
tests/: test_extractor.py
