[project]
name = "summarize-cli"
version = "0.1.0"
description = "CLI que resume URLs e PDFs com Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.7.0",
    "httpx>=0.28.1",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[project.scripts]
summarize = "summarize.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
